Prevent body from horizontal scrolling

--- a/source/stylesheets/globals/_layout.sass
+++ b/source/stylesheets/globals/_layout.sass
@@ -1,6 +1,9 @@
 *
   box-sizing: border-box
 
+body
+  overflow-x: hidden
+
 section
   padding: $section-padding-y $section-padding-x
   border-style: solid
